# dental-erp

./: .gitignore  CLAUDE.md  Justfile  docker-compose.yml  plan.md
backend/: .coverage  .dockerignore  .env.example  Dockerfile  alembic.ini  dental_erp.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2a936c22c90d_initial_schema.py  6dc700585f84_replace_visit_services_with_visit_.py  86a66fddbedd_merge_company_and_services_branches.py  8b52df91ded5_add_services_and_visit_services_drop_.py  97f82ecab18d_add_company_to_doctors.py  b31f8435ba9d_add_worker_price_list_table.py
backend/scripts/: backup.sh
backend/src/dental_erp/: main.py
backend/src/dental_erp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/dental_erp/auth/: router.py  service.py
backend/src/dental_erp/clients/: models.py  router.py  schemas.py  service.py
backend/src/dental_erp/core/: config.py  database.py  dependencies.py  schemas.py  security.py
backend/src/dental_erp/dashboard/: router.py  schemas.py  service.py
backend/src/dental_erp/doctors/: models.py  router.py  schemas.py  service.py
backend/src/dental_erp/reports/: pdf_builder.py  router.py  schemas.py  service.py
backend/src/dental_erp/services/: models.py  router.py  schemas.py  service.py
backend/src/dental_erp/users/: models.py  (+3 more)
backend/tests/: conftest.py  test_auth.py  test_clients.py  test_dashboard.py  test_database.py  test_doctors.py  test_openapi.py  test_reports.py  test_services.py  test_users.py  test_visits.py  test_worker_price_list.py  test_workers.py
(+75 files in other folders)
